--- a/gradeChecker/grade.css
+++ b/gradeChecker/grade.css
@@ -51,6 +51,19 @@ body
     border-top: 1px solid black;
     width: 80%;
     outline: none;
+    text-align: center;
+}
+.grade-form-button{
+    font-size: 18px;
+    margin: 10px 0 10px 90px;
+    padding: 5px 20px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    background: orange;
+}
+.grade-form-button:hover{
+    background: #f38c15;
 }
 
 .container .grade-form-showdata
@@ -61,11 +74,11 @@ body
 }
 .container .grade-form-showdata p
 {
-    color: white;
+    color: orange;
     font-family: 'Poppins',sans-serif;
     font-weight: 600;
     letter-spacing: 1px;
-    text-shadow: 0px 0px 20px;
+    
 }
 
 
