Update and rename jntua-ciricullum/login.css to jntua-ciricullum/styles/login.css

--- a/jntua-ciricullum/styles/login.css
+++ b/jntua-ciricullum/styles/login.css
@@ -9,7 +9,7 @@
 {
     width: 1520px;
     height: 705px;
-    background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(images/library-2.jpg);
+    background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(../images/library-2.jpg);
     background-position: center;
     background-size: cover
 }
