--- a/ecommerce/main.css
+++ b/ecommerce/main.css
@@ -9,6 +9,7 @@ body {
 
 .container {
     width: 100%;
+    min-width: 300px;
 }
 
 
@@ -19,6 +20,7 @@ body {
     position: absolute;
     top: 0px;
     background: white;
+    min-width: 300px;
 }
 
 .nav-bar ul {
@@ -29,7 +31,7 @@ body {
 }
 
 .nav-items {
-    padding: 0 2%;
+    padding: 1% 2%;
 }
 
 .nav-items a {
@@ -50,29 +52,29 @@ body {
 .section{
     width:80%;
     margin: 100px auto 30px auto;
-    background: #333533;
 }
 .cards{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    color: white;
     margin: 0 10px
 }
 .card{
     width:16rem; 
     margin: 20px;
-    border: 1px solid white;
     text-align: center;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0, 0, .5)
 }
 .card img{
     width: 16rem;
-    height: 12rem
+    height: 12rem;
+    border-radius: 5px 5px 0 0
 }
 .description{
     font-size: 1.1rem;
-    color: #fefae0;
+    color: rgba(0,0, 0);
 }
 .price{
     font-size:1.3rem;
@@ -81,24 +83,29 @@ body {
 .add-item{
     padding: 5px 20px;
     margin: 0 0 10px 0;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     outline: none;
     border: none;
     font-size: 1.2rem;
     font-family: 'Oswald', sans-serif;
     font-family: 'Patrick Hand', cursive; 
-    background: #f8961e;
+    background: black;
+    color: white;
 }
 
 .add-item:hover{
-    background: rgba(248, 150, 30, 0.8)
+    background: rgba(0, 0, 0, 0.8)
 }
-
+.remove-item{
+    background: #d62828;
+}
+.remove-item:hover{
+    background: #f94144;
+}
 
 /*Footer
 --------------------*/
 .footer{
-    position: absolute;
     left: 0;
     right: 0;
     background: #252422;
@@ -146,9 +153,7 @@ body {
 .atm-cards span i{
     padding-left: 5px;
 }
-.py{
-    padding: 10px 0;
-}
+
 
 @media(max-width:280px){
     .section{
@@ -165,6 +170,177 @@ body {
         height: 12rem
     }
 }
+
+/*Form
+-------------*/
+.form{
+    width: 60%;
+    margin: 120px auto 50px auto;
+    background: black;
+    padding: 20px;
+    color: white;
+    border-radius: 5px;
+    
+}
+form{
+    width: 90%;
+    margin: 0 auto
+}
+.form-items label{
+    font-size: 1.4rem;
+}
+.form-items input, .form-items select{
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px 0;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    font-size: 17px;
+    letter-spacing: 0.01rem;
+    padding-left: 10px;
+}
+
+/* continue .... */
+.mtb-ms-3{
+    margin: 5px 0
+}
+.btn-full{
+    width: 40%;
+    padding: 10px 10px;
+    font-size: 20px;
+    border-radius:5px; 
+    background: #0b7e29;
+    margin: 10px 30%;
+    outline: none;
+    border: none;
+    letter-spacing: 0.01rem;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Patrick Hand', cursive;
+}
+.btn-full:hover{
+    background: rgba(11,126,41, 0.9)
+}
+
+/*Admin
+-----------------------*/
+.admin-dashboard{
+    width: 90%;
+    margin: 120px auto 50px auto;
+    background: black;
+    padding: 20px;
+    color: white;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 30% 70%;
+
+    
+    
+}
+.admin-left-side{
+    background: white;
+    border-radius: 5px;
+    margin: 10px;
+    min-width: 200px;
+    height: 300px;
+    overflow: hidden;
+}
+.admin-header{
+    color: black;
+    font-size:1.5rem;
+    border-bottom: 1px solid black;
+    line-height: 50px;
+    padding: 0 0 0 20px;
+    letter-spacing: 0.02rem;
+}
+.list-group{
+    padding: 0;
+    list-style: none;
+    position: relative;
+    top: -22px;
+}
+.list-group li{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    line-height: 50px;
+    
+    
+}
+.list-group li a{
+    text-decoration: none;
+    padding: 0 0 0 20px;
+    font-size: 19px;
+    color: #264653;   
+}
+.list-group li a:hover{
+    text-decoration: underline;
+    
+}
+.admin-right-side{
+    width: 100%;
+    background: white;
+    border-radius: 5px;
+    margin: 10px;
+    color: black;
+    font-size: 17px;
+}
+/*
+.admin-details{
+    display: none;
+}
+*/
+
+.productForm, .categoryForm{
+    display: none;
+}
+
+
+
+@media(max-width:819px){
+    .admin-dashboard{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .admin-left-side{
+        width:300px; 
+    }
+    
+}
+
+/*universal*/
+.btn{
+    text-decoration: none;
+    padding:  0 5px;
+}
+.btn-danger{
+    background: red;
+}
+.b-white{
+    border: 1px solid white
+}
+.bg-dark{
+    background: black;
+    padding: 4px 6px;
+    border-radius: 5px;
+}
+.bg-danger{
+    background: red;
+    padding: 4px 6px;
+    border-radius: 5px;
+}
+.text-white{
+    color: white;
+}
+.badge{
+    color: white;
+    margin: 0 10px 0 20px; 
+}
+.py{
+    padding: 10px 0;
+}
+.mt-4{
+    margin-top: 10px;
+}
+
 
 
 
