--- a/ecommerce/main.css
+++ b/ecommerce/main.css
@@ -15,6 +15,22 @@ body {
 
 /*Navbar
 --------------------------*/
+.nav-bar
+{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background: rgba(231,226,221);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    box-shadow: 1px 1px 10px rgba(0,0,0, 0.5)
+}
+.nav-center{   
+    width: 100%;
+    margin: 0 auto;
+}
+/*
 .nav-bar {
     width: 100%;
     position: absolute;
@@ -22,6 +38,7 @@ body {
     background: white;
     min-width: 300px;
 }
+*/
 
 .nav-bar ul {
     list-style: none;
@@ -31,7 +48,7 @@ body {
 }
 
 .nav-items {
-    padding: 1% 2%;
+    padding: 0.5% 2%;
 }
 
 .nav-items a {
@@ -51,14 +68,14 @@ body {
 -------------------------*/
 .section{
     width:80%;
-    margin: 100px auto 30px auto;
+    margin: 2rem auto;
 }
 .cards{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 0 10px
+    margin: 0 1%;
 }
 .card{
     width:16rem; 
@@ -126,6 +143,9 @@ body {
     color: white;
     font-size: 1.1rem
 }
+.foot-list-items{
+    padding: 0 10px;
+}
 
 .foot-list-items span{
     display: block;
@@ -175,7 +195,7 @@ body {
 -------------*/
 .form{
     width: 60%;
-    margin: 120px auto 50px auto;
+    margin: 5rem auto;
     background: black;
     padding: 20px;
     color: white;
@@ -226,7 +246,7 @@ form{
 -----------------------*/
 .admin-dashboard{
     width: 90%;
-    margin: 120px auto 50px auto;
+    margin: 2rem auto;
     background: black;
     padding: 20px;
     color: white;
@@ -265,11 +285,13 @@ form{
     
     
 }
+
 .list-group li a{
     text-decoration: none;
     padding: 0 0 0 20px;
     font-size: 19px;
-    color: #264653;   
+    color: #264653;  
+    cursor: pointer;
 }
 .list-group li a:hover{
     text-decoration: underline;
@@ -293,8 +315,6 @@ form{
     display: none;
 }
 
-
-
 @media(max-width:819px){
     .admin-dashboard{
         display: flex;
@@ -306,10 +326,162 @@ form{
     
 }
 
-/*universal*/
-.btn{
+/*Cart
+--------------------*/
+.cart{
+    width:95%;
+    margin: 1.6rem auto;
+    background: white;
+    border-radius: 5px;
+}
+.cart-middle{
+    width: 98%;
+    margin: 0 auto;
+}
+.cart-header{
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    line-height: 10px;
+    padding: 10px 0 0 0px;
+}
+.cart-header h2{
+    font-weight: 100;
+    letter-spacing: 0.03rem;
+}
+
+   /*dispalyed when no products*/
+.no-products{
+    display: none;
+    text-align: center;
+    margin: 10% auto;
+}
+.no-products p{
+    font-size:1.5rem;    
+}
+.no-products a{
     text-decoration: none;
-    padding:  0 5px;
+    background: black;
+    padding: 0.5rem 1rem;
+    color: white;
+    border-radius: 5px;
+}
+.no-products a:hover{
+    background: rgba(0, 0, 0, 0.8)
+}
+
+    /*Product*/
+.product{
+    
+    display: grid;
+    grid-template-columns: 20% 70% 10%;
+    border-bottom: 1px solid rgba(0,0,0, 0.2);
+    padding-bottom: 10px;
+}
+.image{
+    margin: 10px;
+    padding-right: 10px;
+}
+.image img{
+    width: 90%;
+    min-width: 150px;
+    height: 200px;
+}
+.product-details{
+    padding-right: 10px;
+}
+.product-details h3{
+    font-size: 20px;
+    font-weight: 500;
+    
+    
+}
+.highlight-light-green{
+    color: forestgreen
+}
+.product-details select{
+    padding: 0.1rem;
+    background: #edf2f4;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgba(0,0,0,0.2);
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 17px;
+
+}
+.remove-btn-cart{
+    padding: 0.14rem;
+    border-radius: 5px;
+    outline: none;
+    background: #d62828;
+    border: none;
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 17px;
+}
+
+.remove-btn-cart:hover{
+    background: #f94144;
+}
+
+    /*Price*/
+.product-price{
+    font-weight: 600;
+    font-size: 25px;
+    letter-spacing: 0.02rem;
+    padding-left: 5px;
+}
+
+.total-amount{
+    display: flex;
+    flex-direction: column-reverse;
+}
+.float-right p{
+    float: right
+}
+.total-amount{
+    
+}
+.total-amount p{
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 0.03rem;
+}
+.total-amount strong{
+    font-size: 25px;
+}
+
+
+
+@media(max-width:920px){
+    .product{
+        grid-template-columns: 45% 45% 10%
+    }
+}
+
+@media(max-width:607px){
+    .product{
+        display: block;
+        text-align: center;
+        padding-top: 20px;
+    }
+    .cart-header{
+        text-align: center;
+    }
+    .cart{
+        width: 100%;
+    }
+    .product-details, .product-price{
+        padding-left: 10px;
+    }
+}
+
+
+/*universal*/
+.btn-close{
+    text-decoration: none;
+    padding:  0 5px;   
+    
 }
 .btn-danger{
     background: red;
@@ -340,5 +512,6 @@ form{
 .mt-4{
     margin-top: 10px;
 }
+
 
 
