--- a/Projects/main.css
+++ b/Projects/main.css
@@ -49,7 +49,8 @@ img:hover{
     transition: 0.4s;
     z-index: 3;
     border-radius: 5px;
-    box-shadow: 0px 0px 20px 
+    box-shadow: 0px 0px 20px;
+    transition: 0.5s ease-in-out;
 }
 .m-4{
     margin: 10px 0 10px 20px;
